Server migrate check

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Lemma is an ElectroMagnetics Modelling API. 
+Lemma is an ElectroMagnetics Modelling API. Lemma is developed in the hopes that it will be helpful for academics, industry, and anyone else interested in modelling. 
