--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+== About
+
 Lemma is an ElectroMagnetics Modelling API. Lemma is developed in the hopes that it will be helpful for academics, industry, and anyone else interested in modelling. 
 
 * Written in C++ 
