--- a/README
+++ b/README
@@ -5,3 +5,4 @@ Lemma is an ElectroMagnetics Modelling API. Lemma is developed in the hopes that
 * Written in C++ 
 * Test driven   
 * Flexible 
+* Fast
