--- a/README
+++ b/README
@@ -6,3 +6,4 @@ Lemma is an ElectroMagnetics Modelling API. Lemma is developed in the hopes that
 * Test driven   
 * Flexible 
 * Fast
+* Object oriented 
