--- a/README
+++ b/README
@@ -7,3 +7,5 @@ Lemma is an ElectroMagnetics Modelling API. Lemma is developed in the hopes that
 * Flexible 
 * Fast 
 * Object oriented 
+
+== Team 
