--- a/README
+++ b/README
@@ -9,3 +9,5 @@ Lemma is an ElectroMagnetics Modelling API. Lemma is developed in the hopes that
 * Object oriented 
 
 == Team 
+
+== Getting involved
